<resources>
    <string name="app_name">Tuner</string>
    <string name="main_setting">setting</string>
    <string name="product_detail_label">Details</string>
    <string name="setting_label">Setting</string>
    <string name="setting_message_suspension">Allow message suspension</string>
    <string name="setting_version_update">Version_detection_and_update</string>
    <string name="help_label">Help</string>
    <string name="help_common_problems">Common problems:</string>
    <string name="help_other_problems">Other problems:</string>
    <string name="help_common_problems_content">
         <![CDATA[
                1.How to use Tuner?<br/><br/>
                2.Watch tutorial video.
          ]]>
    </string>
    <string name="help_other_problems_content">
         <![CDATA[
                Leave a message!<br/><br/>
          ]]>
    </string>

    <string name="help_send_message">send</string>
    <string name="toning_tunner">Tuner</string>
    <string name="toning_violin">Violin</string>
    <string name="toning_viola">Viola</string>
    <string name="toning_cello">Cello</string>
    <string name="help_type">Type</string>

    <string name="toning_string_a">A</string>
    <string name="toning_string_c">C</string>
    <string name="toning_string_e">E</string>
    <string name="toning_string_d">D</string>
    <string name="toning_string_g">G</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
</resources>
