<?xml version="1.0" encoding="utf-8"?>
<com.loopeer.compatinset.InsetLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:orientation="vertical">

    <TextView
        style="@style/TunerText.Title"
        android:text="@string/help_label"/>

    <TextView
        style="@style/TunerText"
        android:layout_marginTop="@dimen/large_padding"
        android:textSize="@dimen/text_size_xxlarge"
        android:text="@string/help_common_problems"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_common"
        style="@style/TunerText"
        android:text="@string/help_common_problems_content"/>

    <TextView
        style="@style/TunerText"
        android:layout_marginTop="46dp"
        android:textSize="@dimen/text_size_xxlarge"
        android:text="@string/help_other_problems"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_other"
        style="@style/TunerText"
        android:text="@string/help_other_problems_content"/>

    <TextView
        style="@style/TunerText"
        android:textStyle="bold"
        android:background="@drawable/shape_title"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_gravity="right"
        android:text="@string/help_send_message"/>

</com.loopeer.compatinset.InsetLinearLayout>