<?xml version="1.0" encoding="utf-8"?>
<com.loopeer.compatinset.InsetLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/large_padding"
    android:paddingRight="@dimen/large_padding"
    android:orientation="vertical">

    <TextView
        style="@style/TunerText.Title"
        android:text="@string/setting_label"/>

    <LinearLayout
        android:layout_marginTop="@dimen/xxlarge_padding"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/text_size_xlarge"
            android:text="@string/setting_message_suspension"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/text_size_xlarge"
            android:text="@string/setting_version_update"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</com.loopeer.compatinset.InsetLinearLayout>